# theft-kit

./: ARCHIVE_CANDIDATES.md  CHECKLIST.md  CORE_SKILLS.md  IMPROVEMENTS.md  README.md  SKILLS_INDEX.md  SKILL_GROUPS.csv  SKILL_PACKS.md  SKILL_STATUS.csv  STREAMLINE_REPORT.md  handoff-2026-04-25-1018-agent-kit-consolidated.md
access-control-audit/: SKILL.md
add-package-feature/: SKILL.md
ai-cost-routing/: SKILL.md
always-design-system/: SKILL.md
api-versioning-policy/: SKILL.md
architect-builder-method/: SKILL.md
brutal-audit/: SKILL.md
canvas/: SKILL.md
change-management-comms/: SKILL.md
ci-failures/: SKILL.md
clean-context-engineering/: SKILL.md
clone-app/: SKILL.md
code-review/: SKILL.md
company-naming/: SKILL.md  overview.md
competitor-teardown/: SKILL.md
component-create/: SKILL.md
content/: app-store-optimizer.md  blog-writer.md  content-calendar.md  content-creator.md  distribution-writer.md  instagram-curator.md  linkedin-strategist.md  newsletter-curator.md  newsletter-writer.md  reddit-community-builder.md  seo-optimizer.md  social-media-manager.md  tiktok-strategist.md  twitter-engager.md
content-engine/: SKILL.md  overview.md
cost-forecasting/: SKILL.md
cost-observability/: SKILL.md
creative/: ad-creative-designer.md  brand-guardian.md  brand-voice-guardian.md  copywriter.md  ux-copywriter.md  video-script-writer.md  visual-concept-maker.md  visual-storyteller.md  whimsy-injector.md
dashboard-patterns/: SKILL.md
data/: data-enrichment.md  data-quality-auditor.md  discord-intel.md  enrichment-specialist.md  notion-sync.md  pipeline-health-checker.md  scraper-architect.md  scraper-operator.md  twitter-intel.md
data-quality-audit/: SKILL.md
debugging-vercel-builds/: SKILL.md  overview.md
design/: accessibility-auditor.md  accessibility-tester.md  asset-exporter.md  brand-kit-manager.md  design-critique.md  design-dev-bridge.md  design-lint.md  design-qa.md  design-system-reviewer.md  figma-creator.md  information-architect.md  interaction-designer.md  mockup-generator.md  onboarding-designer.md  ui-designer.md  user-flow-mapper.md  user-journey-mapper.md  ux-auditor.md  ux-designer.md  ux-researcher.md  visual-design-systems.md
design-system-audit/: SKILL.md
design-system-governance/: SKILL.md
dev-workflow/: SKILL.md  overview.md
engineering/: ai-engineer.md  backend-architect.md  bundle-watchdog.md  cli-developer.md  (+16 more)
webclaw/crates/webclaw-api/: Cargo.toml
webclaw/crates/webclaw-api/src/: main.rs
webclaw/crates/webclaw-browser/: Cargo.toml
webclaw/crates/webclaw-browser/src/: lib.rs
webclaw/crates/webclaw-cli/: Cargo.toml
webclaw/crates/webclaw-cli/src/: main.rs
webclaw/crates/webclaw-core/: Cargo.toml
webclaw/crates/webclaw-core/src/: brand.rs  diff.rs  domain.rs  error.rs  js_eval.rs  metadata.rs  types.rs  youtube.rs
webclaw/crates/webclaw-core/src/llm/: body.rs  cleanup.rs  images.rs  links.rs  metadata.rs
webclaw/crates/webclaw-llm/: Cargo.toml
webclaw/crates/webclaw-llm/src/: chain.rs  clean.rs  error.rs  extract.rs  lib.rs  provider.rs  summarize.rs  testing.rs
webclaw/crates/webclaw-llm/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
(+282 files in other folders)
