[package]
name = "webclaw-api"
description = "REST API server for webclaw web extraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "webclaw-api"
path = "src/main.rs"

[dependencies]
webclaw-core = { workspace = true }
webclaw-fetch = { workspace = true }
webclaw-browser = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
dotenvy = { workspace = true }
