[package]
name = "webclaw-core"
description = "Pure HTML content extraction engine for LLMs"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["quickjs"]
quickjs = ["rquickjs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
scraper = "0.22"
ego-tree = "0.10"
url = { version = "2", features = ["serde"] }
regex = "1"
once_cell = "1"
similar = "2"
rquickjs = { version = "0.9", features = ["classes", "properties"], optional = true }

[dev-dependencies]
tokio = { workspace = true }
